# g1-dds-mcp

./: README.md  README.zh.md  e_urdf.json  manifest.json  pyproject.toml
.claude-flow/data/: pending-insights.jsonl
prompts/: system.md  tools_usage.md
src/: g1_mcp_server.py  robot_configs.py  unitree_sdk2_mcp_server.py
