[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unitree-sdk2-mcp"
version = "0.2.0"
description = "ROSClaw MCP Server for Unitree Robots via DDS (G1, Go2, H1, B2, A2, R1)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "robotics", "unitree", "dds", "g1", "go2", "h1", "b2", "a2", "r1", "humanoid", "quadruped"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[fastmcp]>=1.0.0",
]

[project.optional-dependencies]
dds = [
    "cyclonedds>=0.10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
unitree-sdk2-mcp = "unitree_sdk2_mcp_server:main"
# Legacy alias for backward compatibility
rosclaw-g1-mcp = "unitree_sdk2_mcp_server:main"

[project.urls]
Homepage = "https://github.com/ros-claw/unitree-sdk2-mcp"
Repository = "https://github.com/ros-claw/unitree-sdk2-mcp"
Issues = "https://github.com/ros-claw/unitree-sdk2-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
